--- a/WowCarLauncher/mobile/src/main/res/layout/activity_driving.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_driving.xml
@@ -5,11 +5,23 @@
     android:layout_height="match_parent"
     android:background="@android:color/black">
 
+    <LinearLayout
+        android:id="@+id/ll_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        app:layout_heightPercent="10%h">
+
+    </LinearLayout>
+
     <com.zhy.android.percent.support.PercentRelativeLayout
         android:id="@+id/fl_rev"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/ll_bottom"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         app:layout_marginLeftPercent="1%w"
         app:layout_widthPercent="38%w">
 
@@ -23,16 +35,25 @@
     <com.zhy.android.percent.support.PercentRelativeLayout
         android:id="@+id/fl_speed"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/ll_bottom"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         app:layout_marginRightPercent="1%w"
         app:layout_widthPercent="38%w">
 
+        <com.wow.carlauncher.activity.driving.view.SpeedAndOilView
+            android:id="@+id/soview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_heightPercent="100%w" />
     </com.zhy.android.percent.support.PercentRelativeLayout>
 
     <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/ll_bottom"
+        android:layout_alignParentTop="true"
         android:layout_toEndOf="@id/fl_rev"
         android:layout_toStartOf="@id/fl_speed">
 
