--- a/WowCarLauncher/mobile/src/main/res/layout/content_rev_and_water_temp.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_rev_and_water_temp.xml
@@ -7,12 +7,14 @@
         android:id="@+id/iv_water_temp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="fitXY"
         android:src="@mipmap/driving_rev_water_temp_cursor" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
+        android:scaleType="fitXY"
         android:src="@mipmap/driving_rev_bg" />
 
     <ImageView
@@ -20,5 +22,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
+        android:scaleType="fitXY"
         android:src="@mipmap/driving_rev_bg_cursor" />
 </RelativeLayout>
