--- a/WowCarLauncher/mobile/src/main/res/layout/content_speed_and_oil.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_speed_and_oil.xml
@@ -7,12 +7,14 @@
         android:id="@+id/iv_oil"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="fitXY"
         android:src="@mipmap/driving_speed_oil_cursor" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
+        android:scaleType="fitXY"
         android:src="@mipmap/driving_speed_bg" />
 
     <ImageView
@@ -20,5 +22,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
+        android:scaleType="fitXY"
         android:src="@mipmap/driving_speed_cursor" />
 </RelativeLayout>
