--- a/WowCarLauncher/mobile/src/main/res/layout/content_rev_and_water_temp.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_rev_and_water_temp.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -24,4 +25,20 @@
         android:contentDescription="@string/app_name"
         android:scaleType="fitXY"
         android:src="@mipmap/driving_rev_bg_cursor" />
-</RelativeLayout>
+
+    <com.zhy.android.percent.support.PercentRelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.wow.carlauncher.common.view.PhilTextView
+            android:id="@+id/tv_rev"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="1111"
+            android:textColor="@android:color/white"
+            app:layout_heightPercent="30%h"
+            app:layout_textSizePercent="20%h" />
+    </com.zhy.android.percent.support.PercentRelativeLayout>
+</FrameLayout>
