--- a/WowCarLauncher/mobile/src/main/res/layout/activity_driving.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_driving.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
-    android:orientation="vertical"
-    android:padding="20dp">
+    android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/ll_center"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="9"
-        android:orientation="horizontal">
+        android:layout_weight="7"
+        android:background="@mipmap/driving_black_bg"
+        android:orientation="horizontal"
+        app:layout_heightPercent="48%w">
 
         <com.zhy.android.percent.support.PercentRelativeLayout
             android:id="@+id/fl_rev"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="38">
+            android:layout_weight="11">
 
             <com.wow.carlauncher.activity.driving.view.RevAndWaterTempView
                 android:id="@+id/rwtview"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_centerInParent="true"
-                app:layout_heightPercent="100%w" />
+                app:layout_heightPercent="84%w"
+                app:layout_widthPercent="84%w" />
         </com.zhy.android.percent.support.PercentRelativeLayout>
 
         <FrameLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="22">
+            android:layout_weight="3">
 
 
         </FrameLayout>
@@ -39,14 +42,15 @@
             android:id="@+id/fl_speed"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="38">
+            android:layout_weight="11">
 
             <com.wow.carlauncher.activity.driving.view.SpeedAndOilView
                 android:id="@+id/soview"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_centerInParent="true"
-                app:layout_heightPercent="100%w" />
+                app:layout_heightPercent="84%w"
+                app:layout_widthPercent="84%w" />
         </com.zhy.android.percent.support.PercentRelativeLayout>
 
     </LinearLayout>
@@ -56,8 +60,10 @@
         android:id="@+id/ll_bottom"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/ll_center"
         android:layout_weight="1"
         android:orientation="horizontal">
 
     </LinearLayout>
-</LinearLayout>
+</com.zhy.android.percent.support.PercentRelativeLayout>
