no commit message

--- a/WowCarLauncher/mobile/src/main/res/layout/content_l_music.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_l_music.xml
@@ -15,6 +15,7 @@
         android:gravity="center"
         android:paddingEnd="5dp"
         android:paddingStart="5dp"
+        android:singleLine="true"
         android:text="音乐"
         android:textColor="@android:color/white"
         app:layout_heightPercent="12%h"
