--- a/WowCarLauncher/mobile/src/main/res/layout/activity_driving.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_driving.xml
@@ -23,7 +23,7 @@
             android:layout_alignParentLeft="true"
             app:layout_widthPercent="44%w">
 
-            <com.wow.carlauncher.activity.driving.view.RevAndWaterTempView
+            <com.wow.carlauncher.activity.driving.coolBlack.RevAndWaterTempView
                 android:id="@+id/rwtview"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -39,7 +39,7 @@
             android:layout_alignParentRight="true"
             app:layout_widthPercent="44%w">
 
-            <com.wow.carlauncher.activity.driving.view.SpeedAndOilView
+            <com.wow.carlauncher.activity.driving.coolBlack.SpeedAndOilView
                 android:id="@+id/soview"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -89,12 +89,32 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <com.zhy.android.percent.support.PercentLinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="28">
+                android:layout_weight="28"
+                android:orientation="vertical">
 
-            </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="行驶距离"
+                    android:textColor="#ccc"
+                    app:layout_heightPercent="20%h"
+                    app:layout_marginTopPercent="20%h"
+                    app:layout_textSizePercent="12%h" />
+
+                <com.wow.carlauncher.common.view.PhilTextView
+                    android:id="@+id/tv_driver_distance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="11 KM"
+                    android:textColor="#fff"
+                    app:layout_heightPercent="40%h"
+                    app:layout_textSizePercent="25%h" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
 
             <com.zhy.android.percent.support.PercentLinearLayout
                 android:layout_width="match_parent"
@@ -143,90 +163,164 @@
 
         </LinearLayout>
 
+        <View
+            android:layout_width="0.5dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/l_bg_line2" />
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:lines="1"
+                android:paddingEnd="20dp"
+                android:paddingStart="20dp"
+                android:text="@string/music_name"
+                android:textColor="@color/plugin_music_name"
+                app:layout_textSizePercent="20%h" />
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:id="@+id/rl_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2">
 
+                <com.zhy.android.percent.support.PercentLinearLayout
+                    android:id="@+id/ll_prew"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center">
 
+                    <ImageView
+                        android:id="@+id/iv_prew"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:src="@mipmap/ic_prev2"
+                        app:layout_heightPercent="50%h"
+                        app:layout_widthPercent="50%h" />
+                </com.zhy.android.percent.support.PercentLinearLayout>
+
+                <com.zhy.android.percent.support.PercentLinearLayout
+                    android:id="@+id/ll_play"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/iv_play"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:src="@mipmap/ic_play2"
+                        app:layout_heightPercent="50%h"
+                        app:layout_widthPercent="50%h" />
+                </com.zhy.android.percent.support.PercentLinearLayout>
+
+                <com.zhy.android.percent.support.PercentLinearLayout
+                    android:id="@+id/ll_next"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/iv_next"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:src="@mipmap/ic_next2"
+                        app:layout_heightPercent="50%h"
+                        app:layout_widthPercent="50%h" />
+                </com.zhy.android.percent.support.PercentLinearLayout>
             </LinearLayout>
+        </LinearLayout>
 
-            <com.zhy.android.percent.support.PercentRelativeLayout
+        <View
+            android:layout_width="0.5dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/l_bg_line2" />
+
+        <com.zhy.android.percent.support.PercentRelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <com.zhy.android.percent.support.PercentLinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_alignParentLeft="true"
+                android:orientation="vertical"
+                app:layout_widthPercent="30%w">
 
-                <com.zhy.android.percent.support.PercentLinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentLeft="true"
-                    android:orientation="vertical"
-                    app:layout_widthPercent="30%w">
+                <com.wow.carlauncher.common.view.PhilTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="2.2"
+                    android:textColor="#fff"
+                    app:layout_textSizePercent="30%h" />
 
-                    <com.wow.carlauncher.common.view.PhilTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="2.2"
-                        android:textColor="#fff"
-                        app:layout_textSizePercent="30%h" />
+                <com.wow.carlauncher.common.view.PhilTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="2.2"
+                    android:textColor="#fff"
+                    app:layout_textSizePercent="30%h" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
 
-                    <com.wow.carlauncher.common.view.PhilTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="2.2"
-                        android:textColor="#fff"
-                        app:layout_textSizePercent="30%h" />
-                </com.zhy.android.percent.support.PercentLinearLayout>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:scaleType="centerInside"
+                android:src="@mipmap/driving_tp_car"
+                app:layout_marginBottomPercent="10%h"
+                app:layout_marginTopPercent="10%h"
+                app:layout_widthPercent="40%w" />
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:scaleType="centerInside"
-                    android:src="@mipmap/driving_tp_car"
-                    app:layout_marginBottomPercent="10%h"
-                    app:layout_marginTopPercent="10%h"
-                    app:layout_widthPercent="40%w" />
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:orientation="vertical"
+                app:layout_widthPercent="30%w">
 
-                <com.zhy.android.percent.support.PercentLinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentRight="true"
-                    android:orientation="vertical"
-                    app:layout_widthPercent="30%w">
+                <com.wow.carlauncher.common.view.PhilTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="2.2"
+                    android:textColor="#fff"
+                    app:layout_textSizePercent="30%h" />
 
-                    <com.wow.carlauncher.common.view.PhilTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="2.2"
-                        android:textColor="#fff"
-                        app:layout_textSizePercent="30%h" />
-
-                    <com.wow.carlauncher.common.view.PhilTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="2.2"
-                        android:textColor="#fff"
-                        app:layout_textSizePercent="30%h" />
-                </com.zhy.android.percent.support.PercentLinearLayout>
-            </com.zhy.android.percent.support.PercentRelativeLayout>
-        </LinearLayout>
+                <com.wow.carlauncher.common.view.PhilTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="2.2"
+                    android:textColor="#fff"
+                    app:layout_textSizePercent="30%h" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
+        </com.zhy.android.percent.support.PercentRelativeLayout>
     </LinearLayout>
 </com.zhy.android.percent.support.PercentRelativeLayout>
