--- a/WowCarLauncher/mobile/src/main/res/layout/activity_set.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_set.xml
@@ -107,42 +107,42 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <com.wow.carlauncher.activity.set.view.SAppView
+                <com.wow.carlauncher.view.activity.set.view.SAppView
                     android:id="@+id/ll_app"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
-                <com.wow.carlauncher.activity.set.view.SFangKongView
+                <com.wow.carlauncher.view.activity.set.view.SFangKongView
                     android:id="@+id/ll_fangkong"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="gone" />
 
-                <com.wow.carlauncher.activity.set.view.SObdView
+                <com.wow.carlauncher.view.activity.set.view.SObdView
                     android:id="@+id/ll_obd"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="gone" />
 
-                <com.wow.carlauncher.activity.set.view.SPopupView
+                <com.wow.carlauncher.view.activity.set.view.SPopupView
                     android:id="@+id/ll_popup"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="gone" />
 
-                <com.wow.carlauncher.activity.set.view.STimeView
+                <com.wow.carlauncher.view.activity.set.view.STimeView
                     android:id="@+id/ll_time"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="gone" />
 
-                <com.wow.carlauncher.activity.set.view.SHelpView
+                <com.wow.carlauncher.view.activity.set.view.SHelpView
                     android:id="@+id/ll_help"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="gone" />
 
-                <com.wow.carlauncher.activity.set.view.SSystemView
+                <com.wow.carlauncher.view.activity.set.view.SSystemView
                     android:id="@+id/ll_system_set"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
