--- a/WowCarLauncher/mobile/src/main/res/layout/content_driving_cool_speed_and_oil.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_driving_cool_speed_and_oil.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="1111"
+            android:text="0"
             android:textColor="@android:color/white"
             app:layout_heightPercent="20%h"
             app:layout_textSizePercent="20%h" />
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_speed_dw"
             android:gravity="center"
-            android:text="剩余油量:100%"
+            android:text="剩余油量:未知"
             android:textColor="#ccc"
             app:layout_heightPercent="8%h"
             app:layout_marginTopPercent="5%h"
