no commit message

--- a/WowCarLauncher/mobile/src/main/res/layout/activity_driving.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_driving.xml
@@ -12,9 +12,12 @@
         android:layout_height="match_parent" />
 
     <ImageView
-        android:id="@+id/iv_back"
+        android:id="@+id/iv_back2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:clickable="true"
+        android:contentDescription="@string/app_name"
+        android:focusable="true"
         android:padding="10dp"
         android:src="@mipmap/ic_back"
         app:layout_heightPercent="10%h"
