--- a/WowCarLauncher/mobile/src/main/res/layout/content_driving_cool_black_music.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_driving_cool_black_music.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -74,4 +74,4 @@
                 app:layout_widthPercent="50%h" />
         </com.zhy.android.percent.support.PercentLinearLayout>
     </LinearLayout>
-</LinearLayout>
+</com.zhy.android.percent.support.PercentLinearLayout>
