--- a/WowCarLauncher/mobile/src/main/res/layout/content_l_dock.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_l_dock.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#11000000">
+    android:background="#11000000"
+    android:paddingTop="2dp">
 
     <com.zhy.android.percent.support.PercentLinearLayout
         android:id="@+id/ll_dock1"
