--- a/WowCarLauncher/mobile/src/main/res/layout/activity_set.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_set.xml
@@ -148,6 +148,11 @@
                     android:layout_height="match_parent"
                     android:visibility="gone" />
 
+                <com.wow.carlauncher.view.activity.set.view.STripView
+                    android:id="@+id/ll_driving_set"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone" />
 
             </LinearLayout>
         </ScrollView>
