--- a/WowCarLauncher/mobile/src/main/res/layout/activity_set.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_set.xml
@@ -31,6 +31,15 @@
                 <View style="@style/Interval" />
 
                 <com.wow.carlauncher.common.view.SetView
+                    android:id="@+id/sg_trip"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    st:titleEx="行程设置"
+                    st:type="buttonB" />
+
+                <View style="@style/Interval" />
+
+                <com.wow.carlauncher.common.view.SetView
                     android:id="@+id/sg_obd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -143,13 +152,13 @@
                     android:visibility="gone" />
 
                 <com.wow.carlauncher.view.activity.set.view.SSystemView
-                    android:id="@+id/ll_system_set"
+                    android:id="@+id/ll_system"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="gone" />
 
                 <com.wow.carlauncher.view.activity.set.view.STripView
-                    android:id="@+id/ll_driving_set"
+                    android:id="@+id/ll_trip"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="gone" />
