--- a/WowCarLauncher/mobile/src/main/res/layout/content_driving_cool_black.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_driving_cool_black.xml
@@ -62,10 +62,11 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="当前时间"
+                    android:text="0000-00-00"
                     android:textColor="#ccc"
                     app:layout_heightPercent="30%h"
                     app:layout_marginTopPercent="10%h"
